--- a/Carousel.html
+++ b/Carousel.html
@@ -4,107 +4,107 @@
     <meta charset="UTF-8">
     <title>Carousel</title>
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-<style>
-    ul,
-    li {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
+    <style>
+        ul,
+        li {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
 
-    .carousel {
-        position: relative;
-        width: 300px;
-        height: 200px;
-        /*overflow: hidden;*/
-    }
+        .carousel {
+            position: relative;
+            width: 300px;
+            height: 200px;
+            margin-left: 300px;
+            overflow: hidden;
+        }
 
-    .carousel .img-ct {
-        position: absolute;
-        height: 200px;
-        width: 1800px;
-        transition: all 0.5s;
-    }
+        .carousel .img-ct {
+            position: absolute;
+            height: 200px;
+            width: 1800px;
+        }
 
-    .carousel .img-ct:after {
-        content: '';
-        display: block;
-        clear: both;
-    }
+        .carousel .img-ct:after {
+            content: '';
+            display: block;
+            clear: both;
+        }
 
-    .carousel .img-ct > li {
-        float: left;
-    }
+        .carousel .img-ct > li {
+            float: left;
+        }
 
-    .carousel .img-ct img {
-        width: 300px;
-        height: 200px;
-    }
+        .carousel .img-ct img {
+            width: 300px;
+            height: 200px;
+        }
 
-    .carousel .btn {
-        position: absolute;
-        top: 50%;
-        margin-top: -15px;
-        width: 30px;
-        height: 30px;
-        text-align: center;
-        line-height: 30px;
-        font-size: 18px;
-        text-decoration: none;
-        color: #fff;
-        border-radius: 50%;
-        background-color: #333;
-        opacity: 0.6;
-        display: block;
-    }
+        .carousel .btn {
+            position: absolute;
+            top: 50%;
+            margin-top: -15px;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            line-height: 30px;
+            font-size: 18px;
+            text-decoration: none;
+            color: #fff;
+            border-radius: 50%;
+            background-color: #333;
+            opacity: 0.6;
+            display: block;
+        }
 
-    .carousel .btn-pre {
-        left: 10px;
-    }
+        .carousel .btn-pre {
+            left: 10px;
+        }
 
-    .carousel .btn-next {
-        right: 10px;
-    }
+        .carousel .btn-next {
+            right: 10px;
+        }
 
-    .carousel .bullet-ct {
-        position: absolute;
-        bottom: 20px;
+        .carousel .bullet-ct {
+            position: absolute;
+            bottom: 20px;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+
+        .carousel .bullet {
+            /*		position: absolute;
         left: 0;
         right: 0;
-        text-align: center;
-    }
+        margin: auto;
+        bottom: 20px;
+        width: 150px;*/
+            display: inline-block;
+        }
 
-    .carousel .bullet {
-        /*		position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    bottom: 20px;
-    width: 150px;*/
-        display: inline-block;
-    }
+        .carousel .bullet:after {
+            /*		content: '';
+        display: block;
+        clear: both;*/
+        }
 
-    .carousel .bullet:after {
-        /*		content: '';
-    display: block;
-    clear: both;*/
-    }
+        .carousel .bullet > li {
+            /*float: left;*/
+            display: inline-block;
+            width: 20px;
+            height: 6px;
+            border-radius: 3px;
+            background-color: #fff;
+            margin: 0 5px;
+            cursor: pointer;
+        }
 
-    .carousel .bullet > li {
-        /*float: left;*/
-        display: inline-block;
-        width: 20px;
-        height: 6px;
-        border-radius: 3px;
-        background-color: #fff;
-        margin: 0 5px;
-        cursor: pointer;
-    }
-
-    .carousel .bullet .active {
-        background-color: #666;
-    }
-</style>
+        .carousel .bullet .active {
+            background-color: #666;
+        }
+    </style>
 </head>
 
 <body>
@@ -128,25 +128,31 @@
     <div class="bullet-ct">
         <ul class="bullet">
             <li class="active"></li>
-            <li></li>
-            <li></li>
-            <li></li>
         </ul>
     </div>
 </div>
 <div class="carousel">
     <ul class="img-ct">
         <li data-index=0>
-            <a href=""><img src="http://cdn.jirengu.com/book.jirengu.com/img/1.jpg" alt="1.jpg"></a>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/5.jpg" alt="1.jpg"></a>
         </li>
         <li data-index=1>
-            <a href=""><img src="http://cdn.jirengu.com/book.jirengu.com/img/2.jpg" alt="2.jpg"></a>
-        </li>
-        <li data-index=2>
-            <a href=""><img src="http://cdn.jirengu.com/book.jirengu.com/img/3.jpg" alt="3.jpg"></a>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/6.jpg" alt="2.jpg"></a>
         </li>
         <li data-index=3>
-            <a href=""><img src="http://cdn.jirengu.com/book.jirengu.com/img/4.jpg" alt="4.jpg"></a>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/8.jpg" alt="4.jpg"></a>
+        </li>
+        <li data-index=0>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/1.jpg" alt="1.jpg"></a>
+        </li>
+        <li data-index=1>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/2.jpg" alt="2.jpg"></a>
+        </li>
+        <li data-index=2>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/3.jpg" alt="3.jpg"></a>
+        </li>
+        <li data-index=3>
+            <a href="##"><img src="http://cdn.jirengu.com/book.jirengu.com/img/4.jpg" alt="4.jpg"></a>
         </li>
     </ul>
     <a class="btn btn-pre" href="#">&lt;</a>
@@ -154,65 +160,90 @@
     <div class="bullet-ct">
         <ul class="bullet">
             <li class="active"></li>
-            <li></li>
-            <li></li>
-            <li></li>
         </ul>
     </div>
 </div>
 <script>
-    function Carousel(ct){
+    function Carousel(ct) {
         this.$ct = ct
-        this.$bulletLiList = this.$ct.find('.bullet>li')
+        this.$bullet = ct.find('.bullet')
+        this.$imgCt = ct.find('.img-ct')
+        this.imgCount = ct.find('.img-ct>li').length
+        this.imgWidth = ct.find('.img-ct>li img').width()
+        this.isFinish = true
+        this.curPageIndex = 1
+        this.addBullet()
+        this.$bulletLiList = ct.find('.bullet>li')
         this.carouselSwitch()
     }
     Carousel.prototype = {
-        carouselSwitch: function(){
-            let i = 0
-            this.substitution(i)
-            this.$ct.find('.btn-next').click(() => {
-                i++
-                if (i>3){
-
-                    i=0
-                }
-                this.imgActive(i)
-
-            })
-            this.$ct.find('.btn-pre').click(() => {
-                i--
-                if (i < 0){
-                    i=3
-                }
-                this.imgActive(i)
-            })
+        carouselSwitch: function () {
+            this.substitution()
+            this.playPre()
+            this.playNext()
             this.bulletClick()
-
         },
-        bulletClick: function(){
-            this.$ct.find('.bullet').click((e) => {
-                let i = this.$bulletLiList.index(e.target)
-                if(i === -1) return;
-                this.imgActive(i)
+        playPre: function () {
+            this.$ct.find('.btn-pre').click(() => {
+                if (!this.isFinish) return
+                this.isFinish = false
+                this.curPageIndex--
+                this.$ct.find('.img-ct').animate({'left': '+=300px'}, () => {
+                    if (this.curPageIndex === 0) {
+                        this.curPageIndex = this.imgCount
+                        this.$ct.find('.img-ct').css({'left': `${-this.imgWidth  * this.imgCount}px`})
+                    }
+                    this.isFinish = true
+                    this.setBullet()
+                })
             })
+        },
 
+        playNext: function () {
+            this.$ct.find('.btn-next').click(() => {
+                if (!this.isFinish) return;
+                this.isFinish = false
+                this.curPageIndex++
+                this.$ct.find('.img-ct').animate({'left': '-=300px'}, () => {
+                    if (this.curPageIndex === this.imgCount + 1) {
+                        this.curPageIndex = 1
+                        this.$ct.children('.img-ct').css('left', `${-this.imgWidth }px`)
+                    }
+                    this.isFinish = true;
+                    this.setBullet()
+                })
+            })
         },
-        imgActive: function(i){
+        addBullet: function(){
+            this.$imgCt.width(this.imgWidth * (this.imgCount +2))
+            for (let j = 1; j<this.imgCount; j++){
+                let $li = $('<li></li>')
+                this.$bullet.append($li)
+            }
+        },
+        setBullet: function(){
             this.$bulletLiList.removeClass('active')
-            this.$bulletLiList.eq(i).addClass('active')
-            this.$ct.find('.img-ct').css({'left': `${-300*i}px`})
+                          .eq(this.curPageIndex-1).addClass('active')
         },
-        substitution: function(i) {
+        bulletClick: function () {
+            this.$ct.find('.bullet').click((e) => {
+                this.curPageIndex = this.$bulletLiList.index(e.target) + 1
+                console.log(this.curPageIndex)
+                if(this.curPageIndex === 0) return
+                this.$ct.find('.img-ct').css({'left': `${-this.imgWidth * (this.curPageIndex)}px`})
+                this.setBullet()
+            })
+        },
+        substitution: function () {
             let $imgCt = this.$ct.find('.img-ct')
             let firstClone = this.$ct.find('.img-ct>li').first().clone()
             let lastClone = this.$ct.find('.img-ct>li').last().clone()
             firstClone.appendTo($imgCt)
             lastClone.prependTo($imgCt)
-            this.$ct.find('.img-ct').css({'left': '-300px'})
-
-
+            this.$ct.find('.img-ct').css({'left': `${-this.imgWidth}px`})
         }
     }
+
     new Carousel($('.carousel').eq(0))
     new Carousel($('.carousel').eq(1))
 </script>
